--- a/rebooter/server/config.json
+++ b/rebooter/server/config.json
@@ -1,7 +1,7 @@
 {
   "ip": "192.168.1.2",
   "username": "admin",
-  "password": "ton_mdp",
+  "password": "password",
   "dow": "1",
   "time": "10:30",
 }
