--- a/rebooter/docker-compose.yml
+++ b/rebooter/docker-compose.yml
@@ -6,12 +6,13 @@ services:
       dockerfile: Dockerfile
     container_name: repeater-rebooter
     ports:
-      - "3333:3333"         # ← port hôte:conteneur
+      - "3333:3333"
     environment:
       - TZ=Europe/Paris
-      - PORT=3333           # ← l’app Node écoute sur 3333
+      - PORT=3333
     volumes:
       - /volume1/docker/rebooter/server/config.json:/app/server/config.json
-      - /volume1/docker/rebooter/logs:/app/logs
       - /volume1/docker/rebooter/server/views:/app/server/views
+      - /volume1/docker/rebooter/scripts:/app/scripts        
+      - /volume1/docker/rebooter/logs:/app/logs
     restart: unless-stopped
